initi commit showed blank pages

--- a/gallery/SwarmMPL_Clipboard_1-Basics.ipynb
+++ b/gallery/SwarmMPL_Clipboard_1-Basics.ipynb
@@ -3,7 +3,21 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# SwarmMPL Clipboard Tutorial: 1) Basics",
+   "source": [
+    "# SwarmMPL Clipboard Tutorial: 1) Basics\n",
+    "\n",
+    "The Clipboard object can be used to plot waveforms, spectrograms, or both. The name \"Clipboard\" comes from SWARM's \"Clipboard\" panel to visualize data.\n",
+    "\n",
+    "Clipboard is an extension of Matplotlib's Figure object so that users can modify it as needed. Clipboard also has special built-in methods for easier use.\n",
+    "\n",
+    "Create a Clipboard object by passing an ObsPy Stream object. \n",
+    "Clipboard will make a SubFigure for each Trace in Stream. Merge Streams as desired before calling Clipboard.\n",
+    "\n",
+    "This example shows:\n",
+    "- default usage of the Clipboard object\n",
+    "- modifying settings for spectrograms and waveforms\n",
+    "- changing the time axes from UTC to relative (e.g., seconds)"
+   ],
    "id": "5ea069fcce7a0f16"
   },
   {
@@ -206,40 +220,6 @@
     }
    ],
    "execution_count": 12
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-14T23:33:11.380130Z",
-     "start_time": "2024-10-14T23:33:11.376570Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "print(\"Done.\")",
-   "id": "58dc62f1666d868e",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done.\n"
-     ]
-    }
-   ],
-   "execution_count": 13
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-14T23:33:11.383281Z",
-     "start_time": "2024-10-14T23:33:11.381381Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "3a40c8111938e003",
-   "outputs": [],
-   "execution_count": 13
   }
  ],
  "metadata": {
