Update to Helicorder tutorials

--- a/gallery/Helicorder_tutorial.ipynb
+++ b/gallery/Helicorder_tutorial.ipynb
@@ -1,15 +1,52 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    ""
-   ]
+    "# Helicorders\n",
+    "The vdapseisutils Helicorder object takes advantage of ObsPy's dayplot for the basic plotting routines. However, it adds functionality:\n",
+    "- more customization\n",
+    "- plotting catalogs and \"tags\" (and customizing those markers)\n",
+    "- more control over time tick labels and timezones\n",
+    "\n",
+    "Examples below show the default behavior as well as advanced behavior"
+   ],
+   "id": "43c0fa128868a0f"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-05T20:30:47.108327Z",
+     "start_time": "2025-02-05T20:30:46.102435Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from obspy.clients.fdsn import Client\n",
+    "from obspy import UTCDateTime\n",
+    "# from vdapseisutils import Helicorder\n",
+    "from vdapseisutils.core.swarmmpl.heli import Helicorder\n",
+    "from vdapseisutils.style.colors import greyscale_hex, swarm_colors_hex"
+   ],
+   "id": "e52815889c04625e",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Default behavior (Gareloi, Alaska)",
+   "id": "78a1b6e4b513ae6"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "d1ed2ec1669fa63b"
   }
  ],
  "metadata": {
@@ -32,5 +69,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 5
 }
