Update to Helicorder tutorials

--- a/gallery/Helicorder_tutorial.ipynb
+++ b/gallery/Helicorder_tutorial.ipynb
@@ -99,6 +99,7 @@
     "## Advanced behavior (Goma)\n",
     "\n",
     "This example shows how to:\n",
+    "- Use colors from SWARM (\"blue-scale\")\n",
     "- plot a catalog\n",
     "- plot tags (timestamps)\n",
     "- highlight timeperiods\n",
@@ -147,7 +148,6 @@
    "cell_type": "code",
    "source": [
     "# Make the helicorder\n",
-    "\n",
     "print(\"Creating Helicorder... (60 minute interval)\")\n",
     "h = Helicorder(st, interval=60, color=swarm_colors_hex,  # define the helicorder specs\n",
     "                title=\"Earthquakes near Goma (\" + st[0].id + \")\",\n",
