Update to helicorder options

--- a/gallery/Helicorder_tutorial.ipynb
+++ b/gallery/Helicorder_tutorial.ipynb
@@ -17,18 +17,16 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-05T20:57:18.681198Z",
-     "start_time": "2025-02-05T20:57:17.668791Z"
+     "end_time": "2025-02-07T23:39:46.018651Z",
+     "start_time": "2025-02-07T23:39:45.178739Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from obspy.clients.fdsn import Client\n",
     "from obspy import UTCDateTime\n",
     "# from vdapseisutils import Helicorder\n",
-    "from vdapseisutils.core.swarmmpl.heli import Helicorder\n",
-    "from vdapseisutils.style.colors import greyscale_hex, swarm_colors_hex"
+    "from vdapseisutils.core.swarmmpl.heli import Helicorder"
    ],
    "id": "e52815889c04625e",
    "outputs": [],
@@ -43,21 +41,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-05T20:57:18.909651Z",
-     "start_time": "2025-02-05T20:57:18.683041Z"
+     "end_time": "2025-02-07T23:39:46.247721Z",
+     "start_time": "2025-02-07T23:39:46.020537Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# Read data from IRIS\n",
-    "# start = UTCDateTime(\"2021/05/20\")\n",
-    "# stop = UTCDateTime(\"2021/05/21\")\n",
-    "# client = Client(\"IRIS\")\n",
-    "# print(\"Getting waveforms...\")\n",
-    "# st = client.get_waveforms(\"AV\", \"GALA\", \"--\", \"BHZ\", start, stop)\n",
-    "# st.write(\"./output/Helicorders/gareloi_waveform.mseed\")\n",
-    "\n",
-    "# Or read from file\n",
     "from obspy import read\n",
     "st = read(\"./output/Helicorders/gareloi_waveform.mseed\")"
    ],
@@ -68,8 +57,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-05T20:57:20.413757Z",
-     "start_time": "2025-02-05T20:57:18.916640Z"
+     "end_time": "2025-02-07T23:39:47.745822Z",
+     "start_time": "2025-02-07T23:39:46.253839Z"
     }
    },
    "cell_type": "code",
@@ -103,55 +92,31 @@
     "- plot a catalog\n",
     "- plot tags (timestamps)\n",
     "- highlight timeperiods\n",
-    "- change the color of the waves"
+    "- change the color of the waves; options include\n",
+    "    - \"greyscale\" (default) \n",
+    "    - \"swarm\" SWARM's \"blue-scale\" gradient\n",
+    "    - \"earthworm\" Earthworm's black, red, blue, green scheme\n",
+    "    - \"obspy\" ObsPy's default color scheme for 'dayplot' (red, green, gold, blue)"
    ],
    "id": "e1acf1ca62d5cace"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-05T20:57:20.496292Z",
-     "start_time": "2025-02-05T20:57:20.415530Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# Download data from IRIS or load from files\n",
-    "# start = UTCDateTime(\"2021/05/20\")\n",
-    "# stop = UTCDateTime(\"2021/05/21\")\n",
-    "# client = Client(\"IRIS\")\n",
-    "# print(\"Getting waveforms...\")\n",
-    "# st = client.get_waveforms(\"II\", \"MBAR\", \"00\", \"BHZ\", start, stop)\n",
-    "# st.write(\"./output/Helicorders/goma_waveform.mseed\")\n",
-    "# print(\"Getting events...\")\n",
-    "# cat = client.get_events(starttime=start, endtime=stop,\n",
-    "#                         # latitude=-1.52, longitude=29.25, maxradius=50/110,\n",
-    "#                         minmagnitude=4.6,\n",
-    "#                         )\n",
-    "# cat.write(\"./output/Helicorders/goma_events.quakeml\", format=\"QUAKEML\")\n",
-    "\n",
-    "from obspy import read, read_events\n",
-    "st = read(\"./output/Helicorders/goma_waveform.mseed\")\n",
-    "cat = read_events(\"./output/Helicorders/goma_events.quakeml\")"
-   ],
-   "id": "f9aac4af8d38810b",
-   "outputs": [],
-   "execution_count": 4
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-05T20:57:21.388693Z",
-     "start_time": "2025-02-05T20:57:20.497647Z"
+     "end_time": "2025-02-07T23:39:48.664536Z",
+     "start_time": "2025-02-07T23:39:47.747503Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Make the helicorder\n",
+    "from obspy import read\n",
+    "st = read(\"./output/Helicorders/goma_waveform.mseed\")\n",
     "print(\"Creating Helicorder... (60 minute interval)\")\n",
-    "h = Helicorder(st, interval=60, color=swarm_colors_hex,  # define the helicorder specs\n",
-    "                title=\"Earthquakes near Goma (\" + st[0].id + \")\",\n",
-    "                )\n",
+    "h = Helicorder(st, interval=60,\n",
+    "               color=\"swarm\",  # Apply SWARM's \"bluescale\" color scheme\n",
+    "               title=\"Earthquakes near Goma (\" + st[0].id + \")\",\n",
+    "               )\n",
     "h.plot_tags(UTCDateTime(\"2021/05/20 01:36:30\"), color=\"yellow\", markersize=8)  # plot a single time\n",
     "h.plot_tags(UTCDateTime(\"2021/05/20 17:19:35\"), marker=\"|\", markeredgecolor=\"blue\", markersize=15)  # plot a single time as a P arrival\n",
     "h.plot_tags(UTCDateTime(\"2021/05/20 17:25:00\"), marker=\"|\", markeredgecolor=\"red\", markersize=15)   # plot a single time as a S arrival\n",
@@ -183,20 +148,20 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-05T20:57:21.392009Z",
-     "start_time": "2025-02-05T20:57:21.389932Z"
+     "end_time": "2025-02-07T23:39:48.667941Z",
+     "start_time": "2025-02-07T23:39:48.665815Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "45ef5ddb3546b8ed",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 4
   }
  ],
  "metadata": {
